--- a/index.html
+++ b/index.html
@@ -5,8 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nike Bootstrap</title>
+    <!-- Bootstrap Link -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 </head>
 <body>
+    <header class="container">
+        <nav class="navbar navbar-expand-lg mt-4">
+            <div class="container">
+              <a class="navbar-brand" href="#">
+                <img src="./icons/Logo.png" alt="" height="42px">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav d-flex">
+                  <li class="nav-item">
+                    <a class="nav-link active"  href="#">Home</a>
+                  </li>
+                  <li class="nav-item ">
+                    <a class="nav-link active" href="#">Product</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#">About us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#">Contact us</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </nav>
+        
+    </header>
     
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
