--- a/index.html
+++ b/index.html
@@ -7,39 +7,59 @@
     <title>Nike Bootstrap</title>
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <!-- Font Awesome  -->
+    <script src="https://kit.fontawesome.com/722bf37857.js" crossorigin="anonymous"></script>
+    <!-- CSS Style Link -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="container">
-        <nav class="navbar navbar-expand-lg mt-4">
-            <div class="container">
-              <a class="navbar-brand" href="#">
-                <img src="./icons/Logo.png" alt="" height="42px">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav d-flex">
-                  <li class="nav-item">
-                    <a class="nav-link active"  href="#">Home</a>
-                  </li>
-                  <li class="nav-item ">
-                    <a class="nav-link active" href="#">Product</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">About us</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">Contact us</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-        </nav>
-        
+    <header class="pb-5 pt-2">
+        <div class="container">
+            <!-- Navbar  -->
+            <nav class="navbar navbar-expand-lg mt-4">
+                <div class="container">
+                  <a class="navbar-brand" href="#">
+                    <img src="./icons/Logo.png" alt="" height="42px">
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav d-flex">
+                      <li class="nav-item">
+                        <a class="nav-link active"  href="#">Home</a>
+                      </li>
+                      <li class="nav-item ">
+                        <a class="nav-link active" href="#">Product</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="#">About us</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="#">Contact us</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+            </nav>
+            <!-- Banner  -->
+            <section>
+                <div class="row align-items-center ">
+                    <div class="col-12 col-md-16 col-lg-6 pe-5 ">
+                        <img class="img-fluid " src="./images/banner.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-16 col-lg-6 ps-5">
+                        <h1 class="banner-title text-uppercase">Nike React <br><span> Infinity Run 2</span></h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing<br> and typesetting industry.</p>
+                        <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
+                    </div>
+                </div>
+            </section>
+        </div>
     </header>
-    
+    <main>
 
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
