--- a/index.html
+++ b/index.html
@@ -57,8 +57,111 @@
             </section>
         </div>
     </header>
-    <main>
-
+    <!-- SHOES  -->
+    <main class="container">
+        <!-- CASUAL SHOES -->
+        <section>
+            <h2 class="my-5">CASUAL SHOES</h2>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-xl-3 g-5">
+                <div class="col">
+                  <div class="card h-100 border-0 rounded-4 shadow-sm">
+                    <div class="p-3 ">
+                        <img src="./images/shoe-2.png" class="rounded-4 img-fluid image" alt="...">
+                    </div>
+                    <div class="card-body">
+                      <h5 class="card-title">Nike Shoe</h5>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <div class="d-flex justify-content-between align-items-center">
+                        <h3>$235</h3>
+                        <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border-0 rounded-4 shadow-sm">
+                    <div class="p-3 ">
+                        <img src="./images/shoe-1.png" class="rounded-4 img-fluid image" alt="...">
+                    </div>
+                    <div class="card-body">
+                      <h5 class="card-title">Sneakers Skate Shoe</h5>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <div class="d-flex justify-content-between align-items-center">
+                        <h3>$235</h3>
+                        <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border-0 rounded-4 shadow-sm">
+                    <div class="p-3 ">
+                        <img src="./images/shoe-3.png" class="rounded-4 img-fluid image" alt="...">
+                    </div>
+                    <div class="card-body">
+                      <h5 class="card-title">Sneakers Basketball shoe</h5>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <div class="d-flex justify-content-between align-items-center">
+                        <h3>$235</h3>
+                        <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </section>
+        <!-- Formal shoes -->
+        <section>
+            <h2 class="my-5">FORMAL SHOES</h2>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-xl-3 g-5">
+                <div class="col">
+                  <div class="card h-100 border-0 rounded-4 shadow-sm">
+                    <div class="p-3 ">
+                        <img src="./images/shoe-4.png" class="rounded-4 img-fluid " alt="...">
+                    </div>
+                    <div class="card-body">
+                      <h5 class="card-title">Prestige High-Cut Leather</h5>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <div class="d-flex justify-content-between align-items-center">
+                        <h3>$235</h3>
+                        <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border-0 rounded-4 shadow-sm">
+                    <div class="p-3 ">
+                        <img src="./images/shoe-5.png" class="rounded-4 img-fluid" alt="...">
+                    </div>
+                    <div class="card-body">
+                      <h5 class="card-title">Slip-On Formal Shoe</h5>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <div class="d-flex justify-content-between align-items-center">
+                        <h3>$235</h3>
+                        <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100 border-0 rounded-4 shadow-sm">
+                    <div class="p-3 ">
+                        <img src="./images/shoe-6.png" class="rounded-4 img-fluid " alt="...">
+                    </div>
+                    <div class="card-body">
+                      <h5 class="card-title">Slip-On Formal Shoe</h5>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <div class="d-flex justify-content-between align-items-center">
+                        <h3>$235</h3>
+                        <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </section>
+        <h2 class="my-5">Formal shoes</h2>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
