--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
     <main class="container">
         <!-- CASUAL SHOES -->
         <section>
-            <h2 class="my-5">CASUAL SHOES</h2>
+            <h2 class="my-5 shoe-title fw-bolder">CASUAL SHOES</h2>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-xl-3 g-5">
                 <div class="col">
                   <div class="card h-100 border-0 rounded-4 shadow-sm">
                     <div class="p-3 ">
-                        <img src="./images/shoe-2.png" class="rounded-4 img-fluid image" alt="...">
+                        <img src="./images/shoe-2.png" class="rounded-4 img-fluid image" alt="">
                     </div>
                     <div class="card-body">
-                      <h5 class="card-title">Nike Shoe</h5>
+                      <h5 class="card-title shoe-title fw-bolder">Nike Shoe</h5>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                       <div class="d-flex justify-content-between align-items-center">
-                        <h3>$235</h3>
+                        <h3 class="price fw-bolder">$235</h3>
                         <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
                       </div>
                     </div>
@@ -81,13 +81,13 @@
                 <div class="col">
                   <div class="card h-100 border-0 rounded-4 shadow-sm">
                     <div class="p-3 ">
-                        <img src="./images/shoe-1.png" class="rounded-4 img-fluid image" alt="...">
+                        <img src="./images/shoe-1.png" class="rounded-4 img-fluid image "alt="">
                     </div>
                     <div class="card-body">
-                      <h5 class="card-title">Sneakers Skate Shoe</h5>
+                      <h5 class="card-title shoe-title fw-bolder">Sneakers Skate Shoe</h5>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                       <div class="d-flex justify-content-between align-items-center">
-                        <h3>$235</h3>
+                        <h3 class="price fw-bolder">$235</h3>
                         <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
                       </div>
                     </div>
@@ -96,13 +96,13 @@
                 <div class="col">
                   <div class="card h-100 border-0 rounded-4 shadow-sm">
                     <div class="p-3 ">
-                        <img src="./images/shoe-3.png" class="rounded-4 img-fluid image" alt="...">
+                        <img src="./images/shoe-3.png" class="rounded-4 img-fluid image" alt="">
                     </div>
                     <div class="card-body">
-                      <h5 class="card-title">Sneakers Basketball shoe</h5>
+                      <h5 class="card-title shoe-title fw-bolder">Sneakers Basketball shoe</h5>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                       <div class="d-flex justify-content-between align-items-center">
-                        <h3>$235</h3>
+                        <h3 class="price fw-bolder">$235</h3>
                         <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
                       </div>
                     </div>
@@ -112,18 +112,18 @@
         </section>
         <!-- Formal shoes -->
         <section>
-            <h2 class="my-5">FORMAL SHOES</h2>
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-xl-3 g-5">
+            <h2 class="my-5 shoe-title fw-bolder">FORMAL SHOES</h2>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-xl-3 g-5 ">
                 <div class="col">
                   <div class="card h-100 border-0 rounded-4 shadow-sm">
                     <div class="p-3 ">
                         <img src="./images/shoe-4.png" class="rounded-4 img-fluid " alt="...">
                     </div>
                     <div class="card-body">
-                      <h5 class="card-title">Prestige High-Cut Leather</h5>
+                      <h5 class="card-title shoe-title fw-bolder">Prestige High-Cut Leather</h5>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                       <div class="d-flex justify-content-between align-items-center">
-                        <h3>$235</h3>
+                        <h3 class="price fw-bolder">$235</h3>
                         <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
                       </div>
                     </div>
@@ -135,10 +135,10 @@
                         <img src="./images/shoe-5.png" class="rounded-4 img-fluid" alt="...">
                     </div>
                     <div class="card-body">
-                      <h5 class="card-title">Slip-On Formal Shoe</h5>
+                      <h5 class="card-title shoe-title fw-bolder">Slip-On Formal Shoe</h5>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                       <div class="d-flex justify-content-between align-items-center">
-                        <h3>$235</h3>
+                        <h3 class="price fw-bolder">$235</h3>
                         <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
                       </div>
                     </div>
@@ -150,10 +150,10 @@
                         <img src="./images/shoe-6.png" class="rounded-4 img-fluid " alt="...">
                     </div>
                     <div class="card-body">
-                      <h5 class="card-title">Slip-On Formal Shoe</h5>
+                      <h5 class="card-title shoe-title fw-bolder">Slip-On Formal Shoe</h5>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                       <div class="d-flex justify-content-between align-items-center">
-                        <h3>$235</h3>
+                        <h3 class="price fw-bolder">$235</h3>
                         <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
                       </div>
                     </div>
@@ -161,8 +161,49 @@
                 </div>
             </div>
         </section>
-        <h2 class="my-5">Formal shoes</h2>
+        <section>
+            <div class="d-flex justify-content-between align-items-center my-5 ">
+                <div class="me-5">
+                    <div class="d-flex align-items-center shadow rounded-4 p-4 my-4">
+                        <div class="me-4">
+                            <img src="./icons/image 12.png" class="img-fluid" width="100px"  alt="">
+                        </div>
+                        <div class="ms-4">
+                            <h3 class="color">Find the Perfect Fit</h3>
+                            <p>Everybody is different, which is why we offer styles for every body.</p>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center shadow rounded-4 p-4 my-4">
+                        <div class="me-4">
+                            <img src="./icons/image 13.png" class="img-fluid" width="100px" alt="">
+                        </div>
+                        <div class="ms-4">
+                            <h3 class="color">Free Exchanges</h3>
+                            <p>One of the many reasons you can shop with peace of mind.</p>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center shadow rounded-4 p-4 my-4">
+                        <div class="me-4">
+                            <img src="./icons/image 14.png" class="img-fluid" width="100px" alt="">
+                        </div>
+                        <div class="ms-4">
+                            <h3 class="color">Contact Our Seller</h3>
+                            <p>They are here to help you. That's quite literally what we pay them for.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-50 ms-5">
+                    <img src="./icons/XMLID 1.png" class="img-fluid" alt="">
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="d-flex justify-content-center align-items-center bg-secondary text-white" style="height: 300px;">
+            <p><small>Copyright ©2022.Bikash Devsharma .All Rights Reserved</small></p>
+        </div>
+        
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
