--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="col-12 col-md-6 col-lg-6 pe-5 ">
                         <img class="img-fluid " src="./images/banner.png" alt="">
                     </div>
-                    <div class="col-12 col-md-16 col-lg-6 ps-5 mobile-banner-text">
+                    <div class="col-12 col-md-6 col-lg-6 ps-5 mobile-banner-text">
                         <h1 class="banner-title text-uppercase">Nike React <br><span> Infinity Run 2</span></h1>
                         <p>Lorem Ipsum is simply dummy text of the printing<br> and typesetting industry.</p>
                         <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
@@ -61,10 +61,10 @@
     <!-- SHOES  -->
     <main class="container">
         <!-- CASUAL SHOES -->
-        <!-- <section>
+        <section class="container">
             <h2 class="my-5 shoe-title fw-bolder">CASUAL SHOES</h2>
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-xl-3 g-5">
-                <div class="col">
+            <div class="row g-5 mb-5">
+                <div class="col-12 col-md-6 col-lg-4">
                   <div class="card h-100 border-0 rounded-4 shadow-sm">
                     <div class="p-3 ">
                         <img src="./images/shoe-2.png" class="rounded-4 img-fluid image" alt="">
@@ -79,10 +79,10 @@
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-md-6 col-lg-4">
                   <div class="card h-100 border-0 rounded-4 shadow-sm">
                     <div class="p-3 ">
-                        <img src="./images/shoe-1.png" class="rounded-4 img-fluid image "alt="">
+                        <img src="./images/shoe-1.png" class="rounded-4 p-5 img-fluid image "alt="">
                     </div>
                     <div class="card-body">
                       <h5 class="card-title shoe-title fw-bolder">Sneakers Skate Shoe</h5>
@@ -94,7 +94,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-md-6 col-lg-4">
                   <div class="card h-100 border-0 rounded-4 shadow-sm">
                     <div class="p-3 ">
                         <img src="./images/shoe-3.png" class="rounded-4 img-fluid image" alt="">
@@ -110,12 +110,13 @@
                   </div>
                 </div>
             </div>
-        </section> -->
+        </section>
+
         <!-- Formal shoes -->
-        <!-- <section>
+        <section class="container">
             <h2 class="my-5 shoe-title fw-bolder">FORMAL SHOES</h2>
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-xl-3 g-5 ">
-                <div class="col">
+            <div class="row g-5 mb-5">
+                <div class="col-12 col-md-6 col-lg-4">
                   <div class="card h-100 border-0 rounded-4 shadow-sm">
                     <div class="p-3 ">
                         <img src="./images/shoe-4.png" class="rounded-4 img-fluid " alt="...">
@@ -130,7 +131,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-md-6 col-lg-4">
                   <div class="card h-100 border-0 rounded-4 shadow-sm">
                     <div class="p-3 ">
                         <img src="./images/shoe-5.png" class="rounded-4 img-fluid" alt="...">
@@ -145,7 +146,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-md-6 col-lg-4">
                   <div class="card h-100 border-0 rounded-4 shadow-sm">
                     <div class="p-3 ">
                         <img src="./images/shoe-6.png" class="rounded-4 img-fluid " alt="...">
@@ -161,7 +162,7 @@
                   </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         
         <!-- <section>
             <div class="d-flex justify-content-between align-items-center my-5 ">
