--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             
             <!-- Banner  -->
             <section>
-                <div class="row mobile-banner tablet-banner tablet-banner-img align-items-center ">
+                <div class="row mobile-banner align-items-center ">
                     <div class="col-12 col-md-6 col-lg-6 pe-5 ">
                         <img class="img-fluid " src="./images/banner.png" alt="">
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 ps-5 mobile-banner-text">
+                    <div class="col-12 col-md-6 col-lg-6 ps-5 mt-5 mobile-banner-text">
                         <h1 class="banner-title text-uppercase">Nike React <br><span> Infinity Run 2</span></h1>
                         <p>Lorem Ipsum is simply dummy text of the printing<br> and typesetting industry.</p>
                         <button class="btn btn-primary px-4 py-3"><i class="fa-solid fa-cart-shopping"></i> BUY NOW</button>
