--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
             </div>
         </section> -->
     </main>
-    <!-- <footer>
-        <div class="d-flex justify-content-center align-items-center bg-secondary text-white" style="height: 300px;">
+    <footer>
+        <div class="d-flex justify-content-center align-items-center footer-bg-color text-white" style="height: 300px;">
             <p><small>Copyright ©2022.Bikash Devsharma .All Rights Reserved</small></p>
         </div>
         
-    </footer> -->
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
