footer responsive issue

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </section> -->
     </main>
     <footer>
-        <div class="d-flex justify-content-center align-items-center footer-bg-color text-white" style="height: 300px;">
+        <div class="d-flex justify-content-center align-items-center bg-secondary text-white" style="height: 300px;">
             <p><small>Copyright ©2022.Bikash Devsharma .All Rights Reserved</small></p>
         </div>
         
