last part added

--- a/index.html
+++ b/index.html
@@ -164,42 +164,44 @@
             </div>
         </section>
         
-        <!-- <section>
-            <div class="d-flex justify-content-between align-items-center my-5 ">
-                <div class="me-5">
-                    <div class="d-flex align-items-center shadow rounded-4 p-4 my-4">
-                        <div class="me-4">
+        <!-- Last part  -->
+        <section>
+            <div class="row mobile-last tablet-last align-items-center my-5">
+                <div class="col-12 col-md-12 col-lg-6">
+                    <div class="row align-items-center w-75 p-3 my-4 rounded-4 shadow mobile-last2">
+                        <div class="col-3 col-md-3 col-lg-3">
                             <img src="./icons/image 12.png" class="img-fluid" width="100px"  alt="">
                         </div>
-                        <div class="ms-4">
-                            <h3 class="color">Find the Perfect Fit</h3>
+                        <div class="col-9 col-md-9 col-lg-9">
+                            <h3 class="last-part-color">Find the Perfect Fit</h3>
                             <p>Everybody is different, which is why we offer styles for every body.</p>
                         </div>
                     </div>
-                    <div class="d-flex align-items-center shadow rounded-4 p-4 my-4">
-                        <div class="me-4">
-                            <img src="./icons/image 13.png" class="img-fluid" width="100px" alt="">
+                    <div class="row align-items-center w-75 p-3 my-4 rounded-4 shadow mobile-last2">
+                        <div class="col-3 col-md-3 col-lg-3">
+                            <img src="./icons/image 12.png" class="img-fluid" width="100px"  alt="">
                         </div>
-                        <div class="ms-4">
-                            <h3 class="color">Free Exchanges</h3>
-                            <p>One of the many reasons you can shop with peace of mind.</p>
-                        </div>
-                    </div>
-                    <div class="d-flex align-items-center shadow rounded-4 p-4 my-4">
-                        <div class="me-4">
-                            <img src="./icons/image 14.png" class="img-fluid" width="100px" alt="">
-                        </div>
-                        <div class="ms-4">
-                            <h3 class="color">Contact Our Seller</h3>
-                            <p>They are here to help you. That's quite literally what we pay them for.</p>
+                        <div class="col-9 col-md-9 col-lg-9">
+                            <h3 class="last-part-color">Find the Perfect Fit</h3>
+                            <p>Everybody is different, which is why we offer styles for every body.</p>
                         </div>
                     </div>
+                    <div class="row align-items-center w-75 p-3 my-4 rounded-4 shadow mobile-last2">
+                        <div class="col-3 col-md-3 col-lg-3">
+                            <img src="./icons/image 12.png" class="img-fluid" width="100px"  alt="">
+                        </div>
+                        <div class="col-9 col-md-9 col-lg-9">
+                            <h3 class="last-part-color">Find the Perfect Fit</h3>
+                            <p>Everybody is different, which is why we offer styles for every body.</p>
+                        </div>
+                    </div>
+                    
                 </div>
-                <div class="w-50 ms-5">
+                <div class="col-12 col-md-6 col-lg-6">
                     <img src="./icons/XMLID 1.png" class="img-fluid" alt="">
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
     <footer>
         <div class="d-flex justify-content-center align-items-center bg-secondary text-white" style="height: 300px;">
