--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                   
               </div>
               <div class="col-12 col-md-6 col-lg-6">
-                  <img src="./images/shopping.png" class="img-fluid" alt="">
+                  <img src="./icons/XMLID 1.png" class="img-fluid" alt="">
               </div>
           </div>
         </section>
