shoe header updated

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <main class="container">
         <!-- CASUAL SHOES -->
         <section class="container">
-            <h2 class="my-5 shoe-title fw-bolder">CASUAL SHOES</h2>
+            <h2 class="my-5 shoe-title shoes-header fw-bolder">CASUAL SHOES</h2>
             <div class="row g-5 mb-5">
                 <div class="col-12 col-md-6 col-lg-4">
                   <div class="card h-100 border-0 rounded-4 shadow-sm">
@@ -114,7 +114,7 @@
 
         <!-- Formal shoes -->
         <section class="container">
-            <h2 class="my-5 shoe-title fw-bolder">FORMAL SHOES</h2>
+            <h2 class="my-5 shoe-title shoes-header fw-bolder">FORMAL SHOES</h2>
             <div class="row g-5 mb-5">
                 <div class="col-12 col-md-6 col-lg-4">
                   <div class="card h-100 border-0 rounded-4 shadow-sm">
